FEAT: RegisterPage Update, SingleServicePag,

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
     --primary: #52b035;
     --secondary: #444;
 
+    --sjgsg:#1e476c;
     --text-color-1: #222222;
     --text-color-2: #555555;
 
